--- a/MusicPlayer/MusicPlayer.csproj
+++ b/MusicPlayer/MusicPlayer.csproj
@@ -68,25 +68,25 @@
     <Compile Include="AboutForm.Designer.cs">
       <DependentUpon>AboutForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ConvertFrom.cs" />
+    <Compile Include="Classes\ConvertFrom.cs" />
     <Compile Include="EditForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="EditForm.Designer.cs">
       <DependentUpon>EditForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Enums.cs" />
+    <Compile Include="Classes\Enums.cs" />
     <Compile Include="LyricsForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="LyricsForm.Designer.cs">
       <DependentUpon>LyricsForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MusicPlayer_.cs">
+    <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MusicPlayer_.Designer.cs">
-      <DependentUpon>MusicPlayer_.cs</DependentUpon>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MusicPanel.cs">
       <SubType>Component</SubType>
@@ -99,7 +99,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TagFile.cs" />
+    <Compile Include="Classes\TagFile.cs" />
     <EmbeddedResource Include="AboutForm.resx">
       <DependentUpon>AboutForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -109,8 +109,8 @@
     <EmbeddedResource Include="LyricsForm.resx">
       <DependentUpon>LyricsForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MusicPlayer_.resx">
-      <DependentUpon>MusicPlayer_.cs</DependentUpon>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PlaybackBarControl.resx">
       <DependentUpon>PlaybackBarControl.cs</DependentUpon>
